# autonomous-legal-assistant

./: .env.example  .gitignore  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/: auth.py  routes.py  users.py
app/auth/: __init__.py  dependencies.py  examples.py  exceptions.py  permissions.py  policies.py  roles.py
app/core/: config.py  constants.py  database.py  exceptions.py  lifespan.py  lifespan_exmple.py  logging.py  security.py
app/database/migrations/: env.py
app/database/migrations/versions/: 4c630f5bf5ee_initial_database.py
app/database/models/: __init__.py  agent_run.py  api_key.py  audit.py  base.py  citation.py  conversation.py  document.py  document_chunks.py  embedding.py  feedback.py  message.py  notification.py  permission.py  refresh_token.py  report.py  role.py  user.py  workflow.py
app/database/repositories/: __init__.py  agent_run.py  api_key.py  audit.py  base.py  citation.py  conversation.py  document.py  document_chunk.py  embedding.py  feedback.py  message.py  notification.py  permission.py  refresh_token.py  report.py  role.py  user.py  workflow.py
app/database/schemas/: __init__.py  agent_run.py  api_key.py  audit.py  citation.py  common.py  conversation.py  document.py  document_chunks.py  embedding.py  feedback.py  message.py  notification.py  permission.py  refresh_token.py  report.py  role.py  user.py  workflow.py
app/services/: auth_service.py  token_service.py  user_service.py
app/tests/: test_api.py  test_authorization.py
